
'''Added'''
* Adding movie filter in HTMLPurifier for Liveleak movies (vaughan)
* Adding movie filter in HTMLPurifier for vimeo movies (vaughan)
* Adding IcmsSecureForm to create IcmsPersistable object form with a seucirty token. We will recommend to always use this within the IcmsPersistable Framework when not on the admin side (malanciault)

===2008-09-14 : 1.1 RC 1===

'''Added'''
* agree box before upgrading to make sure of a backup. (stranger)
* added password can't contain username to pass check in admin edit user form. (vaughan)
* default template form usable by core feature or any modules - system_default_form.html (malanciault)
* new function to list all fonts (stranger)
* new function to generate pdfs (stranger)
* implementing beforePreviewTarea and afterPreviewTarea preload events (malanciault)
* implementing IcmsPersistableSeoObject to manage SEO-enabled object within the IcmsPersistable Framework (malanciault)

'''Improved'''
* Improved how we use rtl in system. (stranger/real_therplima)
* Moved captcha to classes + some configurations were updated. (stranger)
* Updated TCPDF to version 4.0.023. (stranger)
* Removed warnings for unhandled global attribut in icms.htmlpurifier.php
* Updated jscalendar to 1.2 . (stranger)
* Time picker now works correctly with jalali (stranger/Ali Farhadi)
* Improving content manager page display to use displayTarea instead of previewTarea (malanciault)
* Changing sanitizeContentCss() to icms_sanitizeContentCss() (malanciault)
* #2011730: Installer: Check for phpOpenID requirements on install (malanciault/skenow)
* #2014053: Installer: Check for php5 on install (malanciault/skenow)
* #2091448: Installer: installation with safemode=on is not possible (malanciault/skenow)
* Correct implementation of TextEditor within IcmsForm, we are now using normal dhtmltarea as ImpressCMS will handle what editor needs to be displayed (malanciault)

'''Fixed'''