@@ -77,12 +77,19 @@ if(!defined("XOOPS_FOOTER_INCLUDED"))
 	$config_handler = & xoops_gethandler ( 'config' );
 	$xoopsConfigMetaFooter = & $config_handler->getConfigsByCat ( XOOPS_CONF_METAFOOTER );
 	if ($xoopsConfigMetaFooter['use_google_analytics'] == 1 && isset($xoopsConfigMetaFooter['google_analytics']) && $xoopsConfigMetaFooter['google_analytics'] != ''){
-		$xoTheme->addScript('<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-			</script>
-	<script type="text/javascript">
-_uacct = "UA-'.$xoopsConfigMetaFooter['google_analytics'].'";
-urchinTracker();
-</script>');
+  	/** @todo Place Google Analytics code in the footer, just before the </body> tag. $xoTheme->addScript adds it to the HEAD */
+    /* Legacy GA urchin code */
+  	//$xoTheme->addScript('http://www.google-analytics.com/urchin.js',array('type' => 'text/javascript'),'_uacct = "UA-'.$xoopsConfigMetaFooter['google_analytics'].'";urchinTracker();');
+    $scheme = parse_url(ICMS_URL, PHP_URL_SCHEME);
+    if ($scheme == 'http'){
+  	/* New GA code, http protocol */
+      $xoTheme->addScript('http://www.google-analytics.com/ga.js',array('type' => 'text/javascript'),'');
+      $xoTheme->addScript('',array('type' => 'text/javascript'),'var pageTracker = _gat._getTracker("UA-'.$xoopsConfigMetaFooter['google_analytics'].'"); pageTracker._trackPageview();'); 
+    } elseif ($scheme == 'https') {
+  	/* 	New GA code, https protocol */
+      $xoTheme->addScript('https://ssl.google-analytics.com/ga.js',array('type' => 'text/javascript'),'');
+      $xoTheme->addScript('',array('type' => 'text/javascript'),'var pageTracker = _gat._getTracker("UA-'.$xoopsConfigMetaFooter['google_analytics'].'"); pageTracker._trackPageview();');
+  	}
 	}
 		$xoTheme->render();
 	}
