@@ -16,6 +16,9 @@ ImpressCMS ChangeLog
 * Adding movie filter in HTMLPurifier for vimeo movies (vaughan)
 * Adding IcmsSecureForm to create IcmsPersistable object form with a seucirty token. We will recommend to always use this within the IcmsPersistable Framework when not on the admin side (malanciault)
 
+'''Improved'''
+* Rendering of Google Analytics script and new script source from Google (skenow)
+
 ===2008-09-14 : 1.1 RC 1===
 
 '''Added'''
